force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__ContactPointAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactPointAddressId__c</fullName>
    <label>Fulfilled To Contact Point Address</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContactPointAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>