force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__FulfilledToNm__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfilledToNm__c</fullName>
    <label>Fulfilled To Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfilledToNm</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>