force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__FulfilledToPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfilledToPhoneId__c</fullName>
    <label>Fulfilled To Phone</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfilledToPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>