force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__FulfilledToText__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfilledToText__c</fullName>
    <label>Fulfilled To</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfilledToText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>