force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__FulfillmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfillmentStatus__c</fullName>
    <label>Fulfillment Order Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfillmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>