force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__FulfillmentTypeCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfillmentTypeCategory__c</fullName>
    <label>Fulfillment Type Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfillmentTypeCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>