force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__IsReship__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsReship__c</fullName>
    <label>is Reship</label>
    <length>6</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsReship</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>