force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__rel_1697761213650_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761213650_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FulfillmentOrder_FulfilledToPhoneId__rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>FulfillmentOrder_FulfilledToPhoneId__rel</relationshipLabel>
    <relationshipName>rel_1697761213650_end</relationshipName>
    <type>Lookup</type>
</CustomField>