force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__rel_1697761213735_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761213735_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FulfillmentOrder_ContactPointAddress_rel</label>
    <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
    <relationshipLabel>FulfillmentOrder_ContactPointAddress_rel</relationshipLabel>
    <relationshipName>rel_1697761213735_end</relationshipName>
    <type>Lookup</type>
</CustomField>