force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__rel_1697761214465_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761214465_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FulfillmentOrder_SalesOrderId_map_Sa_rel</label>
    <referenceTo>ssot__SalesOrder__dlm</referenceTo>
    <relationshipLabel>FulfillmentOrder_SalesOrderId_map_Sa_rel</relationshipLabel>
    <relationshipName>rel_1697761214465_end</relationshipName>
    <type>Lookup</type>
</CustomField>