force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__TaxPolicy__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxPolicy__c</fullName>
    <label>Tax Policy</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxPolicy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>