force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalAmount__c</fullName>
    <label>Total Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>