force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__TotalDeliveryAdjTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeliveryAdjTaxAmount__c</fullName>
    <label>Total Delivery Adjustment Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeliveryAdjTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>