force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__TotalDeliveryAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeliveryAmount__c</fullName>
    <label>Total Delivery Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeliveryAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>