force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__TotalDeliveryWithTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeliveryWithTaxAmount__c</fullName>
    <label>Total Delivery With Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeliveryWithTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>