force-app/main/default/objects/ssot__FulfillmentOrder__dlm/fields/ssot__TotalProductWithTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalProductWithTaxAmount__c</fullName>
    <label>Total Product With Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalProductWithTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>